securitycontext-networkpolicy/gadget/manifests/NetworkPolicy/checkoutservice-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: checkoutservice-network
  namespace: demo
spec:
  egress:
  - ports:
    - port: 7070
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: cartservice
  - ports:
    - port: 3550
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: productcatalogservice
  - ports:
    - port: 7000
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: currencyservice
  - ports:
    - port: 50051
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: shippingservice
  - ports:
    - port: 50051
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: paymentservice
  - ports:
    - port: 5000
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: emailservice
  podSelector:
    matchLabels:
      app: checkoutservice
  policyTypes:
  - Ingress
  - Egress
