securitycontext-networkpolicy/gadget/manifests/NetworkPolicy/frontend-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network
  namespace: demo
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: kube-system
      podSelector:
        matchLabels:
          component: kube-proxy
          tier: node
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          name: tigera-operator
      podSelector:
        matchLabels:
          k8s-app: tigera-operator
          name: tigera-operator
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
  - Ingress
  - Egress
