securitycontext-networkpolicy/gadget/manifests/NetworkPolicy/redis-cart-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: redis-cart-network
  namespace: demo
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: tigera-operator
      podSelector:
        matchLabels:
          k8s-app: tigera-operator
          name: tigera-operator
    ports:
    - port: 6379
      protocol: TCP
  podSelector:
    matchLabels:
      app: redis-cart
  policyTypes:
  - Ingress
  - Egress
